tests/errors/no_useless_else.php
<?php

declare(strict_types=1);

if (! isset($a)) {
    $a = 12;
} else {
}
